# opensearch-index-cleaner

./: .env.template  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: docker-build.yml
sample/: rules.yml
src/: main.rs
