[package]
name = "opensearch-index-cleaner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "opensearch-index-cleaner"
path = "src/main.rs"

[dependencies]
aiven_rs = "0.4.1"
chrono = "0.4"
dotenv = "0.15.0"
env_logger = "0.9.0"
fnmatch-regex = "0.2.0"
log = "0.4.17"
reqwest = "0.11.14"
serde = "1.0"
serde_json = "1.0.91"
serde_yaml = "0.8"
tokio = { version = "1.18.2", features = ["full"] }
